--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,11 @@ name = "pypi"
 [packages]
 flask = "*"
 flask-caching = "*"
+python-dotenv = "*"
+redis = "*"
+flask-migrate = "*"
+sqlalchemy-serializer = "*"
+flask-sqlalchemy = "*"
 
 [dev-packages]
 
